# otus_006_allocator

./: .travis.yml  CMakeLists.txt
src/: CMakeLists.txt  fix_allocator.h  list.h  main.cpp
test/: CMakeLists.txt
test/src/: CMakeLists.txt  test_allocator.cpp
